lib: Add shared library and code refactor.

--- a/apps/showcase-app/src/app/app.component.html
+++ b/apps/showcase-app/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Showcase app</h1>
+<main>
+  <showcase-app-header></showcase-app-header>
+  <showcase-app-body></showcase-app-body>
+  <showcase-app-footer></showcase-app-footer>
+</main>
