app: Implement base design to app, implement services and code refactor.

--- a/apps/showcase-app/src/app/app.component.html
+++ b/apps/showcase-app/src/app/app.component.html
@@ -1,4 +1,6 @@
-<main>
+<main
+  class="relative min-h-screen grid grid-rows-[3rem_1fr_3rem] bg-light dark:bg-dark text-dark dark:text-light transition-colors duration-500"
+>
   <showcase-app-header></showcase-app-header>
   <showcase-app-body></showcase-app-body>
   <showcase-app-footer></showcase-app-footer>
