music-player-lib: Implement UI barebones of music player .

--- a/apps/showcase-app/src/app/components/header/header.component.html
+++ b/apps/showcase-app/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header
   class="header w-full h-full flex justify-between items-center px-2 lg:px-8 lg:py-8"
 >
-  <showcase-app-logo></showcase-app-logo>
+  <showcase-app-logo class="lg:mt-8 ml-2 mt-2"></showcase-app-logo>
 
   <showcase-app-theme-button
     class="header__button-theme hidden lg:block"
