--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -1,9 +1,11 @@
-<main class="h-full grid grid-rows-[2rem_1fr_2rem] text-center">
+<main
+  class="h-full grid grid-rows-[2rem_1fr_2rem] text-center bg-gradient-to-tl from-cyan-500 to-purple-500"
+>
   <header class="flex items-center justify-center text-lg mt-2">
     Music player
   </header>
-  <body class="flex items-center">
-    <div class="flex flex-col justify-around h-1/2 w-full mx-8">
+  <body class="flex items-center justify-center">
+    <div class="flex flex-col justify-around h-1/2 w-full mx-8 lg:w-1/4">
       <p>Play music from one of the platform</p>
       <button
         mat-raised-button
