--- a/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
+++ b/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
@@ -1,2 +1,9 @@
-<p>local-music works!</p>
-<a routerLink="..">Go back</a>
+<music-player-base-component playerType="local">
+  <p header-label>Local music</p>
+  <section body-content>
+    There will be a playlist, a search component and a wavy component
+  </section>
+  <section footer-content>
+    The music player controls will be displayed here
+  </section>
+</music-player-base-component>
