--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -43,13 +43,16 @@ $showcase-app-theme: mat.define-light-theme(
 html,
 .mat-list-option,
 .mat-button-wrapper,
-.mat-bottom-sheet-container {
+.mat-bottom-sheet-container,
+.mat-menu-item {
   font-family: 'Fira code', monospace, 'Helvetica Neue', sans-serif;
 }
 
 // Style Angular material components
 .mat-bottom-sheet-container,
-.mat-list-option {
+.mat-list-option,
+.mat-menu-content,
+.mat-menu-item {
   @apply bg-light dark:bg-dark text-dark dark:text-light transition-colors duration-500;
 }
 
