--- a/libs/music-player-lib/src/lib/features/youtube/youtube.component.html
+++ b/libs/music-player-lib/src/lib/features/youtube/youtube.component.html
@@ -1,2 +1,9 @@
-<p>youtube works!</p>
-<a routerLink="..">Go back</a>
+<music-player-base-component playerType="youtube">
+  <p header-label>Youtube</p>
+  <section body-content>
+    There will be a playlist, a search component and a wavy component
+  </section>
+  <section footer-content>
+    The music player controls will be displayed here
+  </section>
+</music-player-base-component>
