music-lib: Code refactor.

--- a/libs/music-player-lib/src/lib/features/spotify/spotify.component.html
+++ b/libs/music-player-lib/src/lib/features/spotify/spotify.component.html
@@ -2,6 +2,7 @@
   <p header-label>Spotify</p>
   <section body-content>
     There will be a playlist, a search component and a wavy component
+    {{ music$ | async }}
   </section>
   <section footer-content>
     The music player controls will be displayed here
