music-lib: Implement spotify player feature - base and code refactor.

--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -17,7 +17,7 @@
       </button>
       <button
         mat-raised-button
-        class="bg-yellow-300 dark:bg-yellow-600"
+        class="bg-cyan-300 dark:bg-cyan-600"
         routerLink="local-library"
       >
         Local library
