--- a/apps/showcase-app/src/styles.scss
+++ b/apps/showcase-app/src/styles.scss
@@ -12,10 +12,10 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $showcase-app-primary: mat.define-palette(mat.$indigo-palette);
-$showcase-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$showcase-app-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$showcase-app-warn: mat.define-palette(mat.$red-palette);
+$showcase-app-warn: mat.define-palette(mat.$cyan-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
@@ -58,4 +58,12 @@ html,
 
 .mat-button-wrapper {
   @apply text-dark dark:text-light;
+}
+
+.mat-slider-track-wrapper {
+  @apply bg-light;
+}
+
+.mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
+  @apply border border-light;
 }
