--- a/libs/music-player-lib/src/lib/components/player-base/player-base.component.html
+++ b/libs/music-player-lib/src/lib/components/player-base/player-base.component.html
@@ -1,10 +1,17 @@
 <main
-  class="music-player h-full grid grid-rows-[3rem_1fr_4rem] bg-gradient-to-tr"
-  [ngClass]="changeStyle('main')"
+  class="music-player h-full grid grid-rows-[3rem_1fr] bg-gradient-to-tr"
+  [ngClass]="{
+    'from-green-900 to-green-500': playerType === 'spotify',
+    'from-cyan-900 to-cyan-500': playerType === 'local',
+    'grid-rows-[3rem_1fr_10rem]': isTrackSelected$ | async
+  }"
 >
   <header
     class="music-player__header flex items-center justify-between w-full px-4"
-    [ngClass]="changeStyle('header')"
+    [ngClass]="{
+      'bg-green-500': playerType === 'spotify',
+      'bg-cyan-500': playerType === 'local'
+    }"
   >
     <button mat-icon-button utilsBackButton>
       <mat-icon>arrow_back</mat-icon>
@@ -21,7 +28,10 @@
     <ng-content select="[body-content]"></ng-content>
   </body>
 
-  <footer class="youtube__footer" [ngClass]="changeStyle('footer')">
+  <footer
+    class="music-player__footer bg-[rgba(0,0,0,0.2)] transition-all duration-300"
+    [ngClass]="{ hidden: isTrackSelected$ | async }"
+  >
     <ng-content select="[footer-content]"></ng-content>
   </footer>
 </main>
