--- a/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
+++ b/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
@@ -2,10 +2,10 @@
   <p header-label>Local music</p>
   <section body-content>
     There will be a playlist, a search component and a wavy component
-
-    {{ music$ | async }}
   </section>
   <section footer-content>
-    The music player controls will be displayed here
+    <music-player-controls
+      (outputPlayPauseButton)="setPlayingStatus($event)"
+    ></music-player-controls>
   </section>
 </music-player-base-component>
