music-lib-spotify: Code refactor.

--- a/libs/music-player-lib/src/lib/components/track-list/track-list.component.html
+++ b/libs/music-player-lib/src/lib/components/track-list/track-list.component.html
@@ -10,7 +10,7 @@
         class="mb-2"
         *ngFor="let track of trackList"
         [value]="track"
-        (click)="selectTrack(track.title)"
+        (click)="selectTrack(track)"
       >
         <span #item class="truncate w-[250px]">
           {{ track.title }}
