--- a/libs/music-player-lib/src/lib/components/controls/controls.component.html
+++ b/libs/music-player-lib/src/lib/components/controls/controls.component.html
@@ -1,38 +1,35 @@
-<!-- <mat-progress-bar color="warn" mode="determinate" value="40"></mat-progress-bar> -->
+<ng-container *ngIf="inputTrack$ | async as track">
+  <div class="flex flex-col items-center py-2" [@fadeSlideInOut]>
+    <div class="text-center text-light">
+      {{ track.title === '' ? 'No songs selected' : track.title }}
+    </div>
 
-<div class="flex flex-col items-center py-2">
-  <div class="text-center text-light">
-    {{
-      (inputTrackName$ | async) === ''
-        ? 'No songs selected'
-        : (inputTrackName$ | async)
-    }}
+    <mat-slider
+      [disabled]="track.title === ''"
+      class="w-[90%]"
+      aria-label="unit(s)"
+    ></mat-slider>
+    <div class="w-8/12 xl:w-1/3 flex items-center justify-around self-center">
+      <button
+        *ngIf="inputHasSkipPrevious"
+        mat-icon-button
+        (click)="skipToPrevious()"
+      >
+        <mat-icon class="text-light">skip_previous</mat-icon>
+      </button>
+      <button
+        [disabled]="track.title === ''"
+        mat-fab
+        [color]="(inputTrackPlayingStatus$ | async) ? 'warn' : 'primary'"
+        (click)="togglePlayPause()"
+      >
+        <mat-icon class="text-light">{{
+          (inputTrackPlayingStatus$ | async) ? 'pause_arrow' : 'play_arrow'
+        }}</mat-icon>
+      </button>
+      <button *ngIf="inputHasSkipNext" mat-icon-button (click)="skipToNext()">
+        <mat-icon class="text-light">skip_next</mat-icon>
+      </button>
+    </div>
   </div>
-  <mat-slider
-    [disabled]="(inputTrackName$ | async) === ''"
-    class="w-[90%]"
-    aria-label="unit(s)"
-  ></mat-slider>
-  <div class="w-8/12 xl:w-1/3 flex items-center justify-around self-center">
-    <button
-      *ngIf="inputHasSkipPrevious"
-      mat-icon-button
-      (click)="skipToPrevious()"
-    >
-      <mat-icon class="text-light">skip_previous</mat-icon>
-    </button>
-    <button
-      [disabled]="(inputTrackName$ | async) === ''"
-      mat-fab
-      [color]="(inputTrackPlayingStatus$ | async) ? 'warn' : 'primary'"
-      (click)="togglePlayPause()"
-    >
-      <mat-icon class="text-light">{{
-        (inputTrackPlayingStatus$ | async) ? 'pause_arrow' : 'play_arrow'
-      }}</mat-icon>
-    </button>
-    <button *ngIf="inputHasSkipNext" mat-icon-button (click)="skipToNext()">
-      <mat-icon class="text-light">skip_next</mat-icon>
-    </button>
-  </div>
-</div>
+</ng-container>
