--- a/libs/music-player-lib/src/lib/features/spotify/spotify.component.html
+++ b/libs/music-player-lib/src/lib/features/spotify/spotify.component.html
@@ -9,8 +9,8 @@
     ></shared-ui-search>
 
     <music-player-track-list
-      (outputSelectedTrack)="actionSelectTrack($event)"
-      [inputTrackList$]="selectorTrackList$"
+      (outputSpotifySelectedTrack)="actionSelectTrack($event)"
+      [inputSpotifyTrackList$]="selectorTrackList$"
     ></music-player-track-list>
   </section>
 
