--- a/libs/music-player-lib/src/lib/components/track-list/track-list.component.html
+++ b/libs/music-player-lib/src/lib/components/track-list/track-list.component.html
@@ -1,5 +1,9 @@
-<ng-container *ngIf="inputTrackList$ | async as trackList">
-  <mat-selection-list [multiple]="false" class="track-list h-full">
+<ng-container *ngIf="inputLocalTrackList$ | async as trackList; else spotify">
+  <mat-selection-list
+    *ngIf="trackList.length > 0; else empty"
+    [multiple]="false"
+    class="track-list h-full"
+  >
     <cdk-virtual-scroll-viewport
       appendOnly
       itemSize="50"
@@ -8,14 +12,52 @@
     >
       <mat-list-option
         class="mb-2"
-        *ngFor="let track of trackList"
+        *ngFor="let track of trackList; let i = index"
         [value]="track"
-        (click)="selectTrack(track)"
+        (click)="selectLocalTrack(track)"
       >
         <span #item class="truncate w-[250px]">
-          {{ track.title }}
+          {{ track.name }}
         </span>
       </mat-list-option>
     </cdk-virtual-scroll-viewport>
   </mat-selection-list>
+  <ng-template #empty>
+    <div class="h-full grid place-content-center place-items-center">
+      <div class="text-xl w-4/5">Search a song from the API</div>
+    </div>
+  </ng-template>
 </ng-container>
+
+<ng-template #spotify>
+  <ng-container *ngIf="inputSpotifyTrackList$ | async as trackList">
+    <mat-selection-list
+      *ngIf="trackList.length > 0; else empty"
+      [multiple]="false"
+      class="track-list h-full"
+    >
+      <cdk-virtual-scroll-viewport
+        appendOnly
+        itemSize="50"
+        class="track-list__viewport h-[80%] lg:w-1/2"
+        [@listAnimation]="trackList.length"
+      >
+        <mat-list-option
+          class="mb-2"
+          *ngFor="let track of trackList"
+          [value]="track"
+          (click)="selectSpotifyTrack(track)"
+        >
+          <span #item class="truncate w-[250px]">
+            {{ track.name }}
+          </span>
+        </mat-list-option>
+      </cdk-virtual-scroll-viewport>
+    </mat-selection-list>
+    <ng-template #empty>
+      <div class="h-full grid place-content-center place-items-center">
+        <div class="text-xl w-4/5">Search a song from the API</div>
+      </div>
+    </ng-template>
+  </ng-container>
+</ng-template>
