refactor: Code refactor.

--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -6,21 +6,21 @@
   </header>
   <body class="flex items-center justify-center">
     <div class="flex flex-col justify-around h-1/2 w-full mx-8 lg:w-1/4">
-      <p>Play music from one of the platform</p>
+      <p>Choose a music player</p>
 
       <button
         mat-raised-button
         class="bg-green-300 dark:bg-green-700"
-        routerLink="spotify"
+        routerLink="jamendo"
       >
-        Spotify
+        Jamendo
       </button>
       <button
         mat-raised-button
         class="bg-cyan-300 dark:bg-cyan-600"
         routerLink="local-library"
       >
-        Local library
+        Stand-alone
       </button>
     </div>
   </body>
