--- a/libs/music-player-lib/src/lib/components/menu/menu.component.scss
+++ b/libs/music-player-lib/src/lib/components/menu/menu.component.scss
@@ -1,7 +1,7 @@
 .menu-item-home {
   @apply hover:bg-purple-500;
 }
-.menu-item-spotify {
+.menu-item-jamendo {
   @apply hover:bg-green-500;
 }
 .menu-item-local {
