--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -10,7 +10,7 @@
 
       <button
         mat-raised-button
-        class="bg-green-300 dark:bg-green-700"
+        class="bg-pink-300 dark:bg-pink-700"
         routerLink="jamendo"
       >
         Jamendo
