--- a/libs/music-player-lib/src/lib/components/menu/menu.component.html
+++ b/libs/music-player-lib/src/lib/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="inputPlayerType">
+<div [ngSwitch]="inputPlayerType$ | async">
   <div *ngSwitchCase="'jamendo'">
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
