--- a/libs/music-player-lib/src/lib/components/menu/menu.component.scss
+++ b/libs/music-player-lib/src/lib/components/menu/menu.component.scss
@@ -2,7 +2,7 @@
   @apply hover:bg-purple-500;
 }
 .menu-item-jamendo {
-  @apply hover:bg-green-500;
+  @apply hover:bg-pink-500;
 }
 .menu-item-local {
   @apply hover:bg-cyan-500;
