--- a/libs/music-player-lib/src/lib/components/controls/controls.component.html
+++ b/libs/music-player-lib/src/lib/components/controls/controls.component.html
@@ -1,35 +1,75 @@
-<ng-container *ngIf="inputTrack$ | async as track">
-  <div class="flex flex-col items-center py-2" [@fadeSlideInOut]>
-    <div class="text-center text-light">
-      {{ track.name === '' ? 'No songs selected' : track.name }}
-    </div>
+<div [ngSwitch]="inputControllerSize$ | async">
+  <div *ngSwitchCase="'full'">
+    <ng-container *ngIf="inputIsTrackSelected$ | async">
+      <div
+        [@fadeSlideUpDown]
+        class="flex flex-col items-center py-4 transition-all"
+        *ngIf="inputTrack$ | async as track"
+      >
+        <div class="w-full flex justify-between items-center">
+          <button mat-icon-button (click)="minimiseController()">
+            <mat-icon>expand_more</mat-icon>
+          </button>
+          <button mat-icon-button (click)="hideController()">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
 
-    <mat-slider
-      [disabled]="track.name === ''"
-      class="w-[90%]"
-      aria-label="unit(s)"
-    ></mat-slider>
-    <div class="w-8/12 xl:w-1/3 flex items-center justify-around self-center">
-      <button
-        *ngIf="inputHasSkipPrevious"
-        mat-icon-button
-        (click)="skipToPrevious()"
-      >
-        <mat-icon class="text-light">skip_previous</mat-icon>
-      </button>
-      <button
-        [disabled]="track.name === ''"
-        mat-fab
-        [color]="(inputTrackPlayingStatus$ | async) ? 'warn' : 'primary'"
-        (click)="togglePlayPause()"
-      >
-        <mat-icon class="text-light">{{
-          (inputTrackPlayingStatus$ | async) ? 'pause_arrow' : 'play_arrow'
-        }}</mat-icon>
-      </button>
-      <button *ngIf="inputHasSkipNext" mat-icon-button (click)="skipToNext()">
-        <mat-icon class="text-light">skip_next</mat-icon>
-      </button>
-    </div>
+        <div class="text-center text-light">
+          {{ track.name === '' ? 'No songs selected' : track.name }}
+        </div>
+
+        <mat-slider
+          [disabled]="track.name === ''"
+          thumbLabel
+          tickInterval="1"
+          class="w-[90%]"
+          aria-label="unit(s)"
+        ></mat-slider>
+
+        <div
+          class="w-8/12 xl:w-1/3 flex items-center justify-around self-center"
+        >
+          <button
+            *ngIf="inputDisplayPreviousButton$ | async"
+            mat-icon-button
+            (click)="skipTrack(false)"
+          >
+            <mat-icon class="text-light">skip_previous</mat-icon>
+          </button>
+          <button
+            [disabled]="track.name === ''"
+            mat-fab
+            [color]="(inputTrackPlayingStatus$ | async) ? 'warn' : 'primary'"
+            (click)="playPauseTrack()"
+          >
+            <mat-icon class="text-light">{{
+              (inputTrackPlayingStatus$ | async) ? 'pause_arrow' : 'play_arrow'
+            }}</mat-icon>
+          </button>
+          <button
+            *ngIf="inputDisplayNextButton$ | async"
+            mat-icon-button
+            (click)="skipTrack(true)"
+          >
+            <mat-icon class="text-light">skip_next</mat-icon>
+          </button>
+        </div>
+      </div>
+    </ng-container>
   </div>
-</ng-container>
+  <div *ngSwitchCase="'mini'" class="transition-all">
+    <ng-container *ngIf="inputIsTrackSelected$ | async">
+      <div class="flex flex-col items-center py-4 transition-all">
+        <div class="w-full flex justify-between items-center">
+          <button mat-icon-button (click)="maximiseController()">
+            <mat-icon>expand_less</mat-icon>
+          </button>
+          <button mat-icon-button (click)="hideController()">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</div>
