--- a/libs/music-player-lib/src/lib/components/player-base/player-base.component.html
+++ b/libs/music-player-lib/src/lib/components/player-base/player-base.component.html
@@ -1,16 +1,15 @@
 <main
   class="music-player h-full grid grid-rows-[3rem_1fr] bg-gradient-to-tr"
   [ngClass]="{
-    'from-green-900 to-green-500': inputPlayerType === 'jamendo',
-    'from-cyan-900 to-cyan-500': inputPlayerType === 'local',
-    'grid-rows-[3rem_1fr_10rem]': isTrackSelected$ | async
+    'from-pink-900 to-pink-500': (inputPlayerType$ | async) === 'jamendo',
+    'from-cyan-900 to-cyan-500': (inputPlayerType$ | async) === 'local'
   }"
 >
   <header
     class="music-player__header flex items-center justify-between w-full px-4"
     [ngClass]="{
-      'bg-green-500': inputPlayerType === 'jamendo',
-      'bg-cyan-500': inputPlayerType === 'local'
+      'bg-pink-500': (inputPlayerType$ | async) === 'jamendo',
+      'bg-cyan-500': (inputPlayerType$ | async) === 'local'
     }"
   >
     <button mat-icon-button utilsBackButton>
@@ -21,17 +20,16 @@
       <ng-content select="[header-label]"></ng-content>
     </div>
 
-    <music-player-menu [inputPlayerType]="inputPlayerType"></music-player-menu>
+    <music-player-menu
+      [inputPlayerType$]="inputPlayerType$"
+    ></music-player-menu>
   </header>
 
   <body class="music-player__body">
     <ng-content select="[body-content]"></ng-content>
   </body>
 
-  <footer
-    class="music-player__footer bg-[rgba(0,0,0,0.2)] transition-all duration-300"
-    [ngClass]="{ hidden: isTrackSelected$ | async }"
-  >
+  <footer class="music-player__footer bg-[rgba(0,0,0,0.2)]">
     <ng-content select="[footer-content]"></ng-content>
   </footer>
 </main>
