--- a/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
+++ b/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
@@ -1,16 +1,14 @@
-<music-player-base-component
-  [inputPlayerType]="(selectorPlayerType$ | async) || ''"
->
+<music-player-base-component [inputPlayerType$]="selectorPlayerType$">
   <p header-label>Local music</p>
   <section body-content class="h-full">
     <shared-ui-search
       class="flex justify-center w-full"
-      [inputSearchField]="(selectorSearchField$ | async) || defaultSearchTerm"
+      [inputSearchField$]="selectorSearchField$"
       (outputClearQuery)="actionClearSearchQuery()"
     ></shared-ui-search>
 
     <music-player-track-list
-      [inputPlayerListType]="(selectorPlayerType$ | async) || ''"
+      [inputPlayerListType$]="selectorPlayerType$"
       [inputLocalTrackList$]="selectorTrackList$"
       (outputLocalSelectedTrack)="actionSelectTrack($event)"
     ></music-player-track-list>
@@ -18,11 +16,17 @@
 
   <section footer-content>
     <music-player-controls
+      [inputControllerSize$]="selectorControllerSize$"
+      [inputIsTrackSelected$]="selectorIsTrackSelected$"
+      [inputDisplayNextButton$]="selectorDisplayNextButton$"
+      [inputDisplayPreviousButton$]="selectorDisplayPreviousButton$"
       [inputTrack$]="selectorTrack$"
-      [inputHasSkipNext]="false"
-      [inputHasSkipPrevious]="false"
       [inputTrackPlayingStatus$]="selectorIsTrackPlaying$"
-      (outputPlayPauseButton)="actionSetPlayingStatus($event)"
+      (outputOnClickPlayPause)="actionPlayPauseTrack($event)"
+      (outputOnClickSkipTrack)="actionSkipTrack($event)"
+      (outputOnClickHide)="actionHideController()"
+      (outputOnClickMinimise)="actionMinimiseController()"
+      (outputOnClickMaximise)="actionMaximiseController()"
     ></music-player-controls>
   </section>
 </music-player-base-component>
