--- a/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
+++ b/libs/music-player-lib/src/lib/features/local-music/local-music.component.html
@@ -15,18 +15,19 @@
   </section>
 
   <section footer-content>
-    <music-player-controls
+    <music-player-controller
       [inputControllerSize$]="selectorControllerSize$"
       [inputIsTrackSelected$]="selectorIsTrackSelected$"
       [inputDisplayNextButton$]="selectorDisplayNextButton$"
       [inputDisplayPreviousButton$]="selectorDisplayPreviousButton$"
-      [inputTrack$]="selectorTrack$"
+      [inputLocalTrack$]="selectorTrack$"
+      [inputPlayerType$]="selectorPlayerType$"
       [inputTrackPlayingStatus$]="selectorIsTrackPlaying$"
       (outputOnClickPlayPause)="actionPlayPauseTrack($event)"
       (outputOnClickSkipTrack)="actionSkipTrack($event)"
       (outputOnClickHide)="actionHideController()"
       (outputOnClickMinimise)="actionMinimiseController()"
       (outputOnClickMaximise)="actionMaximiseController()"
-    ></music-player-controls>
+    ></music-player-controller>
   </section>
 </music-player-base-component>
