refactor: Code refactor

--- a/libs/music-player-lib/src/lib/components/home/home.component.html
+++ b/libs/music-player-lib/src/lib/components/home/home.component.html
@@ -1,9 +1,7 @@
 <main
-  class="h-full grid grid-rows-[2rem_1fr_2rem] text-center bg-gradient-to-tl from-cyan-500 to-purple-500"
+  class="h-full pt-6 pb-4 grid grid-rows-[2rem_1fr_2rem] text-center bg-gradient-to-tl from-cyan-500 to-purple-500"
 >
-  <header class="flex items-center justify-center text-lg mt-2">
-    Music player
-  </header>
+  <header class="flex items-center justify-center text-lg">Music player</header>
   <body class="flex items-center justify-center">
     <div class="flex flex-col justify-around h-1/2 w-full mx-8 lg:w-1/4">
       <p>Choose a music player</p>
@@ -13,14 +11,7 @@
         class="bg-pink-300 dark:bg-pink-700"
         routerLink="jamendo"
       >
-        Jamendo
-      </button>
-      <button
-        mat-raised-button
-        class="bg-cyan-300 dark:bg-cyan-600"
-        routerLink="local-library"
-      >
-        Stand-alone
+        Jamendo Music
       </button>
     </div>
   </body>
